[package]
name = "merkle-tree"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
merkle-tree-verify = { version="*", path = "../merkle-tree-verify" }
csv = "1.3.0"
fast-math = "0.1"
indexmap = "2.1.0"
serde = "1.0.137"
serde_json = "1.0.102"
hex = "0.4.3"
rand = "0.8.5"
thiserror = "1.0.50"

solana-program = "1.18.17"
solana-sdk = "1.18.17"

